@@ -46,46 +46,46 @@ COB85DIR = "`cd $(srcdir) && pwd`"
 .PHONY: test diff-summary diff $(MODULES_RUN)
 
 NC_RUN: NC
-	@cd NC && $(MAKE) -k test
+	@cd NC && $(MAKE) -k
 
 SM_RUN: SM
-	@cd SM && $(MAKE) -k test
+	@cd SM && $(MAKE) -k
 
 IC_RUN: IC
-	@cd IC && $(MAKE) -k test
+	@cd IC && $(MAKE) -k
 
 SQ_RUN: SQ
-	@cd SQ && $(MAKE) -k test
+	@cd SQ && $(MAKE) -k
 
 RL_RUN: RL
-	@cd RL && $(MAKE) -k test
+	@cd RL && $(MAKE) -k
 
 ST_RUN: ST
-	@cd ST && $(MAKE) -k test
+	@cd ST && $(MAKE) -k
 
 SG_RUN: SG
-	@cd SG && $(MAKE) -k test
+	@cd SG && $(MAKE) -k
 
 OB_RUN: OB
-	@cd OB && $(MAKE) -k test
+	@cd OB && $(MAKE) -k
 
 IF_RUN: IF
-	@cd IF && $(MAKE) -k test
+	@cd IF && $(MAKE) -k
 
 DB_RUN: DB
-	@cd DB && $(MAKE) -k test
+	@cd DB && $(MAKE) -k
 
 IX_RUN: IX
-	@cd IX && $(MAKE) -k test
+	@cd IX && $(MAKE) -k
 
 DBNOIX_RUN: DBNOIX
-	@cd DBNOIX && $(MAKE) -k test
+	@cd DBNOIX && $(MAKE) -k
 
 RW_RUN: RW
-	@cd RW && $(MAKE) -k test
+	@cd RW && $(MAKE) -k
 
 CM_RUN: CM
-	@cd CM && $(MAKE) -k test
+	@cd CM && $(MAKE) -k
 
 
 test: $(MODULES_RUN)
@@ -148,16 +148,9 @@ $(MODULES_ALL): newcob.val EXEC85$(EXEEXT) $(srcdir)/EXEC85.conf.in
 	. ../atconfig && . ../atlocal NIST_EXEC85_$@ && cd $@ &&  $$COBCRUN_DIRECT ../EXEC85
 	@perl $(srcdir)/expand.pl $@/newcob.tmp $@
 #	@rm -f ./$@/newcob.tmp ./$@/newcob.log ./$@/EXEC85.conf
-	@echo "test:" > $@/Makefile
-	@echo "	@echo" >> $@/Makefile
-	@echo "	@echo \"Performing tests for module directory $@\"" >> $@/Makefile
-	@echo "	@. ../../atconfig && . ../../atlocal NIST_$@   && perl $(COB85DIR)/report.pl" >> $@/Makefile
-	@echo "	@echo" >> $@/Makefile
-	@echo "	@echo \"Comparing test results for module directory $@\"" >> $@/Makefile
-	@echo "	diff $(COB85DIR)/$@.txt report.txt || true" >> $@/Makefile
-	@echo "	@echo" >> $@/Makefile
-#	@echo "	@. ../../atconfig && . ../../atlocal NIST_O-$@ && perl $(COB85DIR)/report.pl -O" >> $@/Makefile
-#	@echo "	diff $(COB85DIR)/$@.txt report.txt || true" >> $@/Makefile
+	@sed -e 's/##MODULE##/'"$@"'/'            \
+	     -e 's|##COB85DIR##|'"$(COB85DIR)"'|' \
+	    $(srcdir)/Makefile.module.in > $@/Makefile
 	@echo "Finished module directory $@."
 
 EXEC85$(EXEEXT): newcob.val
@@ -169,13 +162,14 @@ EXEC85$(EXEEXT): newcob.val
 	else \
 		NEWCOB_VAL=$<; \
 	fi; \
-	sed -e '/^\*END/,$$d' -e '1,/^\*HEADER/d' \
-	-e 's/^002700.*/           "NEWCOB_VAL" ORGANIZATION LINE SEQUENTIAL./' \
-	-e 's/^003000.*/           "newcob.tmp" ORGANIZATION LINE SEQUENTIAL./' \
-	-e 's/^003100.*//' \
-	-e 's/^003400.*/           "unused"./' \
-	-e 's/^003700.*/           "newcob.log"./' \
-	-e 's/^004000.*/           "EXEC85.conf" ORGANIZATION LINE SEQUENTIAL./' \
-	"$$NEWCOB_VAL" > EXEC85.cob
+	sed -e '/^\*END/,$$d'                                                        \
+	    -e '1,/^\*HEADER/d'                                                      \
+	    -e 's/^002700.*/           "NEWCOB_VAL" ORGANIZATION LINE SEQUENTIAL./'  \
+	    -e 's/^003000.*/           "newcob.tmp" ORGANIZATION LINE SEQUENTIAL./'  \
+	    -e 's/^003100.*//'                                                       \
+	    -e 's/^003400.*/           "unused"./'                                   \
+	    -e 's/^003700.*/           "newcob.log"./'                               \
+	    -e 's/^004000.*/           "EXEC85.conf" ORGANIZATION LINE SEQUENTIAL./' \
+	    "$$NEWCOB_VAL" > EXEC85.cob
 	@echo "Compiling EXEC85 program"
 	@. ../atconfig && . ../atlocal EXEC85 && $$COBC -std=cobol85 -x EXEC85.cob
